--- a/sample-config.yml
+++ b/sample-config.yml
@@ -3,8 +3,8 @@
 # sample configuration file
 # -------------------------------
 
-original: "~/Pictures/orig"
-destination: "~/Pictures/dest"
+original: "images/orig"
+destination: "images/dest"
 width: 100
 height: 100
 
